--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 Assumptions:
     - User is only able to check out one book at a time.
     - User is only able to return one book at a time.
+
+    TODO:
+    -Write tests for movies
+    -Figure out mock objects to generate static data of repositories in test
+    -Refactor duplicate code in book and movies repositories
